--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "pytest (>=8.3.5,<9.0.0)"
 ]
 
 
@@ -17,6 +18,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.group.dev.dependencies]
 setuptools = "^78.1.0"
+pytest-cov = "^6.1.1"
 
 
 [tool.poetry.group.lint.dependencies]
